# sparql-semcon

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: mapping.ttl
src/sc_sparql/: __init__.py  config.py  errors.py  main.py  mapping.py  sparql.py  store.py  sync.py
tests/: conftest.py  test_config.py  test_health.py  test_sparql_protocol.py  test_store.py  test_sync.py
